<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/Padding16dp"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/TextViewWidth"
        android:layout_height="@dimen/TextViewHeight"
        android:layout_marginStart="@dimen/Margin16dp"
        android:layout_marginTop="@dimen/Margin32dp"
        android:text="@string/company_details"
        android:textColor="@color/black"
        android:textSize="@dimen/TextSize32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/ViewText"
        android:layout_marginTop="@dimen/Margin32dp"
        android:drawablePadding="@dimen/DrawablePadding"
        android:gravity="center_vertical"
        android:text="@string/www_procrew_pro"
        android:textColor="@color/linkColor"
        app:drawableLeftCompat="@drawable/baseline_home_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        style="@style/ViewText"
        android:drawablePadding="@dimen/DrawablePadding"
        android:gravity="center_vertical"
        android:text="@string/employees_50_100"
        app:drawableLeftCompat="@drawable/baseline_people_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        style="@style/ViewText"
        android:drawablePadding="@dimen/DrawablePadding"
        android:gravity="center_vertical"
        android:text="@string/location_alexandria_egypt"
        app:drawableLeftCompat="@drawable/outline_location_on_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Margin64dp"
        android:lines="2"
        android:text="@string/note"
        android:textColor="@color/black"
        android:textSize="@dimen/TextSize24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>